<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <TextView
        android:id="@+id/titleBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="TRANSFLO Stops"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mapFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBox"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintVertical_bias="0.0"
        tools:context=".MapsActivity" />

    <Button
        android:id="@+id/recenterButton"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:onClick="recenter"
        android:text="@string/recenterText"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/satelliteToggle"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginStart="16dp"
        android:onClick="toggleSatellite"
        android:text="@string/toggleText"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/trackingButton"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:onClick="toggleTracking"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toTopOf="@+id/satelliteToggle"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/searchPanelButton"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:onClick="openSearchPanel"
        android:text="@string/searchboxText"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBox" />

    <LinearLayout
        android:id="@+id/hiddenSearchContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/cancelSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/ic_dialog_close_light"
            android:onClick="closeSearchPanel"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <EditText
            android:id="@+id/nameSearchBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nameSearchHint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/citySearchBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/citySearchHint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/stateSearchBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/stateSearchHint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/zipSearchBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/zipSearchHint"
            android:inputType="number" />

        <Button
            android:id="@+id/doSearchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="submitSearch"
            android:text="@string/genericSearchText" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
